*Empty MediaWiki Message*

--- a/Frans_Roes.mw
+++ b/Frans_Roes.mw
@@ -1,8 +1,8 @@
 '''Frans Roes''' ([[1902]] [[Gaandern]] - [[1974]] [[Hengel]]), was nen Achterhooksen skriever, den meesttieds skref onder den skuulname '''Herman van Velzen'''. Zien dagelekse wark was horlogemaker, moar ziene leefde ging meer oet noar et skrieven van verhalen in et plat, dee-t e wekkeleks skef veur ‘De Graafschapbode’, zon veerteg joor lang. Anvankelek skref e romantiese, Nederlandse verhalen, ok veur ne regionale krante.
-Den bekendsten figuur oet ziene verhalen is [[Aornt Peppelenkamp]], nen armen bessenbinder op de Koolhovense heide.
+Den bekendsten figuur oet ziene verhalen is [[Aornt Peppelenkamp]], nen armen bessembinder op de Koolhovense heide.
 
-Tussen 1945 - 1950 skref Roes ok veer streekromans in et dialekt: ‘Steaven Volman’ (z.j.), ‘Uut ‘t laeven van olde bekenden’ (1945), ‘Een mens vindt zienen weg (z.j.) en ‘Van Achterhooksche Menschen’ (1950). Feiluk bunt dit verhalen, dee umme bepaolde personen dri-jt.
-Ok skref e dree toneelstukken in et plat: ‘Um den olden Berenschot’, ‘Uut de modder’ en ‘Riek Geesink’. Ziene verhalen en toneelstukken slotten an bi-j de aktualiteit van dat moment en greuiden met de tied met. Roes wus de sfeer van et verandernde platteland good te treffen.
+Tussen 1945 - 1950 skref Roes ok veer streekromans in et dialekt: ‘Steaven Volman’ (z.j.), ‘Uut ‘t laeven van olde bekenden’ (1945), ‘Een mens vindt zienen weg (z.j.) en ‘Van Achterhooksche Menschen’ (1950). Feilek bunt dit verhalen, dee um bepaolde personen dreajt.
+Ok skref e dree toneelstukken in et plat: ‘Um den olden Berenschot’, ‘Uut de modder’ en ‘Riek Geesink’. Ziene verhalen en toneelstukken slotten an bi-j de aktualiteit van dat moment en greujden met de tied met. Roes wus de sfeer van et verandernde platteland good te treffen.
 
 In 1955 wier in [[Reurle]] zien spel in de boetenloch ‘Um den olden Saksenheerd’ op evoerd.
 Van ziene verhalen bunt zon 24 bundels oet ebracht, dee-t bunt oet egovven deur Misset-[[Deutekem]], Witkamp-[[Eanske]] en Van den Berg-[[Eanske]]. In 2002 hebt de Stichting [[Staring Instituut]] en de Mr. H.J. Steenbergenstichting den roman ‘Steven Volman’ ovverni-js edrukt. Deur et Staring instuut bunt twee luusterbeuke met verhalen van Frans Roes oetebracht met den name ‘Arie laest Aornt’, deel 1 (2006, oetverkocht) en deel 2 (2007).
