*Empty MediaWiki Message*

--- a/Frans_Roes.mw
+++ b/Frans_Roes.mw
@@ -2,11 +2,11 @@
 Den bekendsten figuur oet ziene verhalen is [[Aornt Peppelenkamp]], nen armen bessembinder op de Koolhovense heide.
 
 Tussen 1945 - 1950 skref Roes ok veer streekromans in et dialekt: ‘Steaven Volman’ (z.j.), ‘Uut ‘t laeven van olde bekenden’ (1945), ‘Een mens vindt zienen weg (z.j.) en ‘Van Achterhooksche Menschen’ (1950). Feilek bunt dit verhalen, dee um bepaolde personen dreajt.
-Ok skref e dree toneelstukken in et plat: ‘Um den olden Berenschot’, ‘Uut de modder’ en ‘Riek Geesink’. Ziene verhalen en toneelstukken slotten an bi-j de aktualiteit van dat moment en greujden met de tied met. Roes wus de sfeer van et verandernde platteland good te treffen.
+Ok skref e dree toneelstukken in et plat: ‘Um den olden Berenschot’, ‘Uut de modder’ en ‘Riek Geesink’. Ziene verhalen en toneelstukken slotten an bi-j de aktualiteit van dat moment en greujden met de tied met. Roes wus de sfeer van et verandernde platteland good te raken.
 
 In 1955 wier in [[Reurle]] zien spel in de boetenloch ‘Um den olden Saksenheerd’ op evoerd.
 Van ziene verhalen bunt zon 24 bundels oet ebracht, dee-t bunt oet egovven deur Misset-[[Deutekem]], Witkamp-[[Eanske]] en Van den Berg-[[Eanske]]. In 2002 hebt de Stichting [[Staring Instituut]] en de Mr. H.J. Steenbergenstichting den roman ‘Steven Volman’ ovverni-js edrukt. Deur et Staring instuut bunt twee luusterbeuke met verhalen van Frans Roes oetebracht met den name ‘Arie laest Aornt’, deel 1 (2006, oetverkocht) en deel 2 (2007).
-Frans Roes mag als den meest populairen skriever van den Achterhook wodden ezene, den vooral opvölt deur ne rake tiepering van de leu in ziene umgeaving.
+Frans Roes mag als den meest populairen skriever van den Achterhook wodden ezene, den veural opvölt deur ne rake tiepering van de leu in ziene umgeaving.
 
 ==Bronnen / oetgoande verwiezing==
 *[http://www.dialectkring.nl/?pageId=200&Frans_Roes Dialectkring Achterhook en Liemers ovver Frans Roes]
