--- a/Frans_Roes.mw
+++ b/Frans_Roes.mw
@@ -8,9 +8,38 @@ In 1955 wier in [[Reurle]] zien spel in de boetenloch ‘Um den olden Saksenheer
 Van ziene verhalen bunt zon 24 bundels oet ebracht, dee-t bunt oet egovven deur Misset-[[Deutekem]], Witkamp-[[Eanske]] en Van den Berg-[[Eanske]]. In 2002 hebt de Stichting [[Staring Instituut]] en de Mr. H.J. Steenbergenstichting den roman ‘Steven Volman’ ovverni-js edrukt. Deur et Staring instuut bunt twee luusterbeuke met verhalen van Frans Roes oetebracht met den name ‘Arie laest Aornt’, deel 1 (2006, oetverkocht) en deel 2 (2007).
 Frans Roes mag als den meest populairen skriever van den Achterhook wodden ezene, den veural opvölt deur ne rake tiepering van de leu in ziene umgeaving.
 
+==Ovverzicht van zien verzamelde wark==
+*Deel 1. De kennismaking
+*Deel 2. Achterhookse metwöskes dl. 2
+*Deel 3. 't Uutstapjen
+*Deel 4. Un oge zo blauw
+*Deel 5. Marie Vatenkamp
+*Deel 6. Rooie Gait
+*Deel 7. Nozern
+*Deel 8. 't Groezelige kealtjen
+*Deel 9. Slaopmutsken
+*Deel 10. De streuper en de vrouw
+*Deel 11. Praotvolk
+*Deel 12. 't Arhuus
+*Deel 13. 't Spoek van de biezenkolk
+*Deel 14. Landleuper
+*Deel 15. En Aornt von'n gat
+*Deel 16. Un lopende hond vindt altied wat
+*Deel 17. De wasvrouw
+*Deel 18. Um 't bezit
+*Deel 19. Jan Meezenbrink
+*Deel 20. Boerenbloed
+*Deel 21, Van un old huus en van mensen
+*Deel 22, ’t Spoekt op de koele
+*Deel 23, De ni-je buurluu
+*Deel 24, Marinus
+*Deel 25, Antjen van 't Hargelink
+*Deel 26, De Griepman op de Griepert
+
 ==Bronnen / oetgoande verwiezing==
 *[http://www.dialectkring.nl/?pageId=200&Frans_Roes Dialectkring Achterhook en Liemers ovver Frans Roes]
 *Henk Krosenbrink (2008), 'Streektaalletterkunde in Oost-Gelderland en op de Oost-Veluwe'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum
+*[http://www.dialectshop.nl/gelderland-gelderse/boeken-literatuur/herman-van-velzen Dialectshop ovver Herman van Velzen]
 
 [[Kattegerie:Achterhooks artikel]]
 [[Kattegerie:Schriever in 't Achterhooks]]
