--- a/Mark_Rutte.mw
+++ b/Mark_Rutte.mw
@@ -13,8 +13,8 @@ Noa t gymnasium te hebn edoane in zinne geboortestean n Heag, volgen Rutte ne ge
 {{Commonscat|Mark Rutte}}
 
 [[Kattegerie:Tweants artikel]]
-[[Kattegerie:Politikus]]
-[[Kattegerie:Poletiek]]
+[[Kattegerie:Nederlaandse politieker]]
+
 
 [[af:Mark Rutte]]
 [[ar:مارك روته]]
