/* Ovverzicht van zien verzamelde wark */ Arhuus --> Arfhuus

--- a/Frans_Roes.mw
+++ b/Frans_Roes.mw
@@ -20,7 +20,7 @@ Frans Roes mag als den meest populairen skriever van den Achterhook wodden ezene
 *Deel 9. Slaopmutsken
 *Deel 10. De streuper en de vrouw
 *Deel 11. Praotvolk
-*Deel 12. 't Arhuus
+*Deel 12. 't Arfhuus
 *Deel 13. 't Spoek van de biezenkolk
 *Deel 14. Landleuper
 *Deel 15. En Aornt von'n gat
