Link naar de Saterfriese versie gecorrigeerd.

--- a/Fraislaand_(regio).mw
+++ b/Fraislaand_(regio).mw
@@ -101,5 +101,5 @@ De Fraise gebieden [[Frieslaand|Westlaauwers Fraislaand]], [[Oostfraislaand]] (m
 [[no:Friesland]]
 [[pl:Fryzja (kraina historyczna)]]
 [[pt:Frísia]]
-[[stq:Fryslân]]
+[[stq:Fräislound]]
 [[zh:弗里西亞]]
