{{DEFAULTSORT:{{PAGENAME}}}} [[Kattegerie:Ofbeelding:Taalkaarte]]

--- a/Bestaand:LocatieWestfrais.png.mw
+++ b/Bestaand:LocatieWestfrais.png.mw
@@ -3,3 +3,6 @@ Et Friso-Frankische dialekt van de regio West-Frieslaand in Noord-Hollaand. Et d
 
 == Licentie ==
 {{Eigenwark}}
+
+{{DEFAULTSORT:{{PAGENAME}}}}
+[[Kattegerie:Ofbeelding:Taalkaarte]]
