Zeet ok [[Ofbeelding:LocatieSelterlaands.png]]

--- a/Bestaand:LocatieSelterfrais.png.mw
+++ b/Bestaand:LocatieSelterfrais.png.mw
@@ -1,2 +1,7 @@
 {{DEFAULTSORT:{{PAGENAME}}}}
 [[Kattegerie:Ofbeelding:Taalkaarte]]
+
+== Zeet ok ==
+<gallery>
+ Ofbeelding:LocatieSelterlaands.png|LocatieSelterlaands.png
+</gallery>
