Zeet ok [[Ofbeelding:LocatieSelterfrais.png]]

--- a/Bestaand:LocatieSelterlaands.png.mw
+++ b/Bestaand:LocatieSelterlaands.png.mw
@@ -1,5 +1,10 @@
 == Licentie ==
 {{Eigenwark}}
 
+== Zeet ok ==
+<gallery>
+ Ofbeelding:LocatieSelterfrais.png|LocatieSelterfrais.png
+</gallery>
+
 {{DEFAULTSORT:{{PAGENAME}}}}
 [[Kattegerie:Ofbeelding:Taalkaarte]]
