interwiki: [[nl:Twents]]; +[[Twents (vervoer)]]

--- a/Twents.mw
+++ b/Twents.mw
@@ -1,5 +1,9 @@
 '''Twents''' kan verwiezen noar meardere dinge:
-*[[Twents Bier]] - n [[beer]]maark oet [[Hengel]]
-*[[Tweants]] - t [[Neersassies]]e [[dialekt]]
+
+* [[Twents Bier]] - n [[beer]]maark oet [[Hengel]]
+* [[Tweants]] - t [[Neersassies]]e [[dialekt]]
+* [[Twents (vervoer)]] - n hoesstiel van t openbaar vervoer in Twente
 
 {{dv}}
+
+[[nl:Twents]]
