--- a/Twents_Bier.mw
+++ b/Twents_Bier.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:Twents Premium Pils.png|thumb|right|150px]]
 
-'''Twents Bier''' (''Tweants beer'') is n [[beer]]maark oet [[Hengel]] in [[Tweante]]. t Is ne kleaine brouwerieje dee't inspölt op de strekke, want t beer is töt non too allenig nog mer in Tweante te kriegn. As beeldmaark hebt ze keuzn vuur t [[Tweants ros|Tweantse ros]].
+'''Twents Bier''' (''Tweants beer'') is n [[beer]]maark oet [[Hengel (Oaveriessel)|Hengel]] in [[Tweante]]. t Is ne kleaine brouwerieje dee't inspölt op de strekke, want t beer is töt non too allenig nog mer in Tweante te kriegn. As beeldmaark hebt ze keuzn vuur t [[Tweants ros|Tweantse ros]].
 
 Twents Bier dut met dree soortn beer: [[Premium Pilsner]], [[witbeer]] en [[rosébeer]]. Disse beern wordt allemoal in aparte fleskes edoane, met nen aparten langen haals, de ''langnekke''.
 
@@ -10,5 +10,5 @@ De brouwerieje böd verskilnd verzörgde roondleaidiges duur de brouwerieje an, 
 *[http://www.twentsebierbrouwerij.nl Offisjele webstea] (in t [[Hollaands]])
 *[http://www.twitter.com/twentsbier Twitterziede van Twents Bier] ([[Twitter]])
 
-[[Kattegerie: Tweants artikel]]
-[[Kattegerie: Drank]]
+[[Kattegerie:Tweants artikel]]
+[[Kattegerie:Drank]]
