[[Hengel]] → [[Hengel (Oaveriessel)]]

--- a/Boorn.mw
+++ b/Boorn.mw
@@ -14,7 +14,7 @@
 | dichtheid = 792
 | breedtegroad = 52/18/00/N
 | lengtegroad = 6/45/00/E
-| verkeersoader = [[A1]], [[A35]]; spoorlien [[Almelo]]-[[Hengel]]
+| verkeersoader = [[A1]], [[A35]]; spoorlien [[Almelo]]-[[Hengel (Oaveriessel)|Hengel]]
 | netnummer = 074
 | postkode = 7620-7626
 | webstie = [http://www.borne.nl www.borne.nl]
