n draoghengsel lik mie n [[hengsel]], neet n [[hengel]]

--- a/Maande.mw
+++ b/Maande.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Baskets four styles.jpg|thumb|250px|right|Vier verschillende soorten maanden]]
-Een '''maande''' of een '''benne''' is meestentieds een evlochen bakke of omhulsel, oek wel '''korve''' eneumd, en soms veurzien van [[hengel|draoghengsels]]. De maande is daarbie van alle kaanten behalve de bovenkaante of-esleuten. Oorspronkelijk wonnen 't emaak van [[riet]], [[strooi]], [[gres]], [[pitriet]] en [[holt|hout]] ([[takke]]n) populaire materialen um maanden van te maken. Tegeswoordig wonnen oek [[pepier]] en [[plastiek]] gebruuk. 
+Een '''maande''' of een '''benne''' is meestentieds een evlochen bakke of omhulsel, oek wel '''korve''' eneumd, en soms veurzien van [[hengsel|draoghengsels]]. De maande is daarbie van alle kaanten behalve de bovenkaante of-esleuten. Oorspronkelijk wonnen 't emaak van [[riet]], [[strooi]], [[gres]], [[pitriet]] en [[holt|hout]] ([[takke]]n) populaire materialen um maanden van te maken. Tegeswoordig wonnen oek [[pepier]] en [[plastiek]] gebruuk. 
 
 Een korve zonder bojem wonnen in [[korfbal]] en [[basketbal]] as doel gebruuk.
 
