--- a/Bokel_(Eanske).mw
+++ b/Bokel_(Eanske).mw
@@ -1,7 +1,7 @@
 [[Image:Heilige Marcellinuskerk Boekelo.jpg|thumb|right|200px|De Healige Marcellinuskearke in Bokel]]
 '''Bokel''' ([[Nederlaands]]: ''Boekelo'') is n kerkdoarp in de [[Tweante|Tweantse]] gemeente [[Eanske]] in de [[Nederlaand]]se proveensie [[Oaveriessel]]. Ut doarp hef ongeveer 2100 inwonners.
 
-t Doarp is vuural bekeand van t zoolt wat ze doar seend [[1919]] boawngroonds haalt (de inwonners wordt hierduur ''Zoaltkloetns'' eneumd), zudelik van t doarp. Toertieds steund Bokel ook bekeand um t ''Bokelbad'', wat spesjaal vuur de leu was an elegd, um t volk, krek as in t westn, te loatn genietn van t zwemn in zoolt water, met doarbie zelfs n zooltwatergolfslagbad. Noadet t [[Tweantekanaal]] an elegd wör, wör de toewmoalige ''Koninklijke Nederlandse Zoutindustrie'' (rechtevoort bekeand as [[Akzo Nobel]]) verplaatst noar [[Hengel]]. Ook konn ze good met textiel in Bokel: in [[1888]] richtn [[G.J. van Heek]] de ''N.V. Boekelosche Stoomblekerij''  (n Bokelsn Stoombleek) op, den at in [[1965]] wör oawernömn duur [[Unilever]], den at t bie P. Fentener van Vlissingen & Co's Katoenfabrieken N.V. dee, wat later Texoprint wör).
+t Doarp is vuural bekeand van t zoolt wat ze doar seend [[1919]] boawngroonds haalt (de inwonners wordt hierduur ''Zoaltkloetns'' eneumd), zudelik van t doarp. Toertieds steund Bokel ook bekeand um t ''Bokelbad'', wat spesjaal vuur de leu was an elegd, um t volk, krek as in t westn, te loatn genietn van t zwemn in zoolt water, met doarbie zelfs n zooltwatergolfslagbad. Noadet t [[Tweantekanaal]] an elegd wör, wör de toewmoalige ''Koninklijke Nederlandse Zoutindustrie'' (rechtevoort bekeand as [[Akzo Nobel]]) verplaatst noar [[Hengel (Oaveriessel)|Hengel]]. Ook konn ze good met textiel in Bokel: in [[1888]] richtn [[G.J. van Heek]] de ''N.V. Boekelosche Stoomblekerij''  (n Bokelsn Stoombleek) op, den at in [[1965]] wör oawernömn duur [[Unilever]], den at t bie P. Fentener van Vlissingen & Co's Katoenfabrieken N.V. dee, wat later Texoprint wör).
 
 Rechtevoort beent ze in Bokel gangs um t industriegebeed umme te zetn noar ne wonwieke: ''De Blekerieje''. De oolde historiese gebouwn hebt ne bestemmige kreegn en bliewt doarduur bewoard.
 
