[[Hengel]] → [[Hengel (Oaveriessel)]]

--- a/Twents.mw
+++ b/Twents.mw
@@ -1,6 +1,6 @@
 '''Twents''' kan verwiezen noar meardere dinge:
 
-* [[Twents Bier]] - n [[beer]]maark oet [[Hengel]]
+* [[Twents Bier]] - n [[beer]]maark oet [[Hengel (Oaveriessel)|Hengel]]
 * [[Tweants]] - t [[Neersassies]]e [[dialekt]]
 * [[Twents (vervoer)]] - n hoesstiel van t openbaar vervoer in Twente
 
