[[Hengel]] → [[Hengel (Oaveriessel)]]

--- a/Dweilorkest.mw
+++ b/Dweilorkest.mw
@@ -118,7 +118,7 @@ Eankele oosterse kapeln:
 
 *''Olnzelse Kopperbloazers'' oet [[Oldnzel]]
 *''Hijskraan'' oet Olnzel
-*''Hengeler Weendbloazers '' oet [[Hengel]]
+*''Hengeler Weendbloazers '' oet [[Hengel (Oaveriessel)|Hengel]]
 *''Jigger Bigger Band'' oet [[Eanske]]
 *''Herriemakers'' oet [[Wierdn]]
 *''Dwarsliggers'' oet [[Eanter]]
