[[Hengel]] → [[Hengel (Oaveriessel)]]

--- a/Arnold_Rakers.mw
+++ b/Arnold_Rakers.mw
@@ -8,7 +8,7 @@ In dizze leste plaatse studeerden hi'j in 1932 of op 't pruufskrift ''Die Mundar
 ==Onderwieswark en baand mit Nederlaand==
 Rakers vuulden een starke baand mit Nederlaand, in 't bezunder mit de [[Nedersaksisch|Nedersaksischtalige gebieden]], die as heur spraoke dielden mit zien eigen [[Graafschop Beynthem|Graofskop Bentem]]. An 't Germanistische Seminar van de universiteit van Marbörg har e Nederlaanse les egeven. Deur 't veraandernde politieke klimaot trök hi'j hum terogge uut Marbörg en kwaamp te wonen en onderwiezen in [[Wielen]] in de Graofskop, kört an de Nederlaanse grèenze. In de oorlog dienden hi'j teeng heug en meug bi'j de [[Wehrmacht]] in Amsterdam. Van 1948 töt 1954 was e lector Nederlaans an de universiteit van Münster. Hi'j deu mit an de oprichting van de volkshogeskoele in Noordhorn en wördden daor 't middelpunt van een literair-filosofische kringe. Rakers kwaamp ter op batteri'je mit onderwies in 't Nederlaans, en zetten hum succesvol in veur 't geven van lessen in 't Nederlaans an de skoelen in de Duutse grèensstreek.
 
-In 1954 gunk Rakers vort van de universiteit van Münster en kwaamp te warken an verskeiden skoelen in Bentem en uutendelijk in Noordhorn. Van 1960 töt 1962 gaf e ok les in Oostnederlaanse en Nederduutse taal en letterkunde an de Mgr. Hoogveld Kweekschool in 't [[Oaveriessel]]se [[Hengel]]. Mit Nederlaanse les en studie van 't Nedersaksisch wol hi'j een goede Duuts-Nederlaanse verstaandholding halfstaon. De Graofskop Bentem zag e as 'Brückenland nach Westen', daoras ebengoed een Nedersaksische as een Nederlaanse taaltredisie bestund. Veur hum skeidden de staotsgrèenze wat samenheurden. In die tied al zag Rakers een verienigd Europa det gestalte krig in '' 'ne hele riege van dee kleinere, natüürlike landschuppen [...] Want et natüürlike levvend nemp aaltied formen an, dee sik in kleinere kringe afspölt en van kleinere kringe uutgaot'.'' Nao de [[Tweede Wereldoorlog|Tweide Wereldoorlog]] har hi'j 't d'r knap stoer mit, hum nog Duutser te vulen en zag hi'j hum 't liefst umringd deur Nederlaanse vrunden.
+In 1954 gunk Rakers vort van de universiteit van Münster en kwaamp te warken an verskeiden skoelen in Bentem en uutendelijk in Noordhorn. Van 1960 töt 1962 gaf e ok les in Oostnederlaanse en Nederduutse taal en letterkunde an de Mgr. Hoogveld Kweekschool in 't [[Oaveriessel]]se [[Hengel (Oaveriessel)|Hengel]]. Mit Nederlaanse les en studie van 't Nedersaksisch wol hi'j een goede Duuts-Nederlaanse verstaandholding halfstaon. De Graofskop Bentem zag e as 'Brückenland nach Westen', daoras ebengoed een Nedersaksische as een Nederlaanse taaltredisie bestund. Veur hum skeidden de staotsgrèenze wat samenheurden. In die tied al zag Rakers een verienigd Europa det gestalte krig in '' 'ne hele riege van dee kleinere, natüürlike landschuppen [...] Want et natüürlike levvend nemp aaltied formen an, dee sik in kleinere kringe afspölt en van kleinere kringe uutgaot'.'' Nao de [[Tweede Wereldoorlog|Tweide Wereldoorlog]] har hi'j 't d'r knap stoer mit, hum nog Duutser te vulen en zag hi'j hum 't liefst umringd deur Nederlaanse vrunden.
 
 ==Taalwetenskoppelijk wark==
 As dialectoloog docht Rakers in termen van taallaandskoppen en taalbewegings, die as e mit behulp van zien historische gegebens kun reconstrueren en uutduden. Hi'j bouwden wieder op [[Gesinus Gerhardus Kloeke|G.G. Kloeke]] zien theorie van de [[Hollaanse expansie]] ('t oavernimmen in de Nederlaanden van taalinvloeden van west naor oost vanof de zestiende ieuw, vanwegen 't grotere prestige van 't [[Hollaand|Hollaanse]] gewest). Rakers warkten de gevolgen van dizze taalbeweging uut veur 't Bentemse gebied.
