--- a/Hengel.mw
+++ b/Hengel.mw
@@ -3,7 +3,8 @@
 *[[Hengel (Oaveriessel)]] - ne gemeente in Oaveriessel
 *[[Hengel (Gelderland)]] - ne gemeente in Gelderlaand
 *[[Hengel (visserieje)]] - ne sporthengel
-*[[Hengel (plaante)]] - een plaantnsoort
+*[[Hengel (plaante)]] - ne plaantnsoort
+*[[Hengsel]] - n haandvat
 
 {{dv}}
 
