--- a/FC_Tweante.mw
+++ b/FC_Tweante.mw
@@ -1,4 +1,4 @@
-'''FC Twente''' of '''FC Tweante''' is ne [[Neerlaand]]se [[voetbal]]verenige den at an [[betaald voetbal]] dut. Ze doot seend öare oprichting in [[1965]] met in de Neerlaandse [[Earedivisie (voetbal)|Eredivisie]], behalve in seizoen [[1983]]/[[1984]]. t Eerste elftal wörd rechtevoort etraind duur [[Steve McLaren]], den at doarin ehulpn wörd duur oold-spöllers [[Erik ten Hag]] en [[Kees van Wonderen]].
+'''FC Twente''' of '''FC Tweante''' is ne [[Neerlaand]]se [[voetbal]]verenige den at an [[betaald voetbal]] dut. Ze doot seend öare oprichting in [[1965]] met in de Neerlaandse [[Earedivisie (voetbal)|Eredivisie]], behalve in seizoen [[1983]]/[[1984]]. t Eerste elftal wörd rechtevoort etraind duur [[Michel Preud'homme]], den at doarin ehulpn wörd duur [[Jos Daerden]] en [[Alfred Schreuder]].
 
 Op [[2 mei]] [[2010]] wör FC Tweante vuur t eerst in de geskiedenisse laandskampioen van Neerlaand, duur te winn van [[NAC]] oet [[Breda]] met 2-0.
 
