*Empty MediaWiki Message*

--- a/Noord_Leegsaksisch.mw
+++ b/Noord_Leegsaksisch.mw
@@ -16,6 +16,10 @@ Tot de grootste Noord Leegsaksische dialekten beheuren onder aandere:
 * t [[Grönnegs]] 
 * t [[Stellenwaarfs]] (ook wel zain as West Leegsaksisch)
 
+== Uutgaonde verwiezingen ==
+
+* [http://nds.plattmakers.de/?dial=120 Noord Leegsaksisch woordenbook bie Plattmakers]
+
 [[Kattegerie:Grunnegs_artikel]]
 [[Kattegerie:Nedersaksisch]]
 
