Volngs Woordenboek van de Drentse Dialecten

--- a/Hengel.mw
+++ b/Hengel.mw
@@ -4,7 +4,7 @@
 *[[Hengel (Gelderland)]] - ne gemeente in Gelderlaand
 *[[Hengel (visserieje)]] - ne sporthengel
 *[[Hengel (plaante)]] - ne plaantnsoort
-*[[Hengsel]] - n haandvat
+*''Hengel'', ''hengsel'' of ''heng(e)'' kan ok n scharnier beduden
 
 {{dv}}
 
