--- a/Hengel.mw
+++ b/Hengel.mw
@@ -4,7 +4,7 @@
 *[[Hengel (Gelderland)]] - ne gemeente in Gelderlaand
 *[[Hengel (visserieje)]] - ne sporthengel
 *[[Hengel (plaante)]] - ne plaantnsoort
-*''Hengel'', ''hengsel'' of ''heng(e)'' kan ok n scharnier beduden
+*''Hengel'', ''hengsel'' of ''heng(e)'' kan ok n [[scharnier]] beduden
 
 {{dv}}
 
