--- a/De_Lut.mw
+++ b/De_Lut.mw
@@ -1,6 +1,6 @@
 '''De Lut''' ([[Hollaands]]: ''De Lutte'') is n doarp in de gemeente [[Loster]], in [[Tweante]] en wördt duur t eegne volk wal ''Bukke'' neumd. t Lig op t oostn van [[Oldnzel]], kort bie de [[Duutslaand|Duutse]] greanze, en har in 2006 umdebie 3000 inwonners.
 
-De Lut ligt an de [[A1]] en an de spoerliene [[Hengel]]-[[Beantem]], mear hef zelf gin treinstasjon. t Doarp is vuural bekeand van t [[Lutterzaand]] woer at seend [[1974]] alle joarn de eerste ploge van [[AFC Ajax]] keump oefenn. t Rivierkn n [[Deenkel]] hef bie De Lut zin eegne karakter eheuldn.
+De Lut ligt an de [[A1]] en an de spoerliene [[Hengel (Oaveriessel)|Hengel]]-[[Beantem]], mear hef zelf gin treinstasjon. t Doarp is vuural bekeand van t [[Lutterzaand]] woer at seend [[1974]] alle joarn de eerste ploge van [[AFC Ajax]] keump oefenn. t Rivierkn n [[Deenkel]] hef bie De Lut zin eegne karakter eheuldn.
 
 ==Geskiedenisse==
 De boerskop De Lut heurdn töt 1811 bie t [[richterambt]] [[Oldnzel]]. Toewmoals har t 4 ''heurnes'': de Roder-, Hengeler-, Molter- en Elfterheurne. In den lestn lea eartieds n Monniknhof. Disn hof wörd al in t tiende joarhonderd eneumd, en heurdn an de abdieje [[Werdn]]. De boerderiejn van disn hof, toertieds ongevear 30, steundn tusken [[Twekkel]] in t zuudn, en [[Geulnkaamp]] (Groafskop [[Beantem]]) in t noordn.
