[[Hengel]] → [[Hengel (Oaveriessel)]]

--- a/Triooo.mw
+++ b/Triooo.mw
@@ -1,4 +1,4 @@
-'''Triooo''' is ne muziekgroepe oet [[Eanske]] en [[Hengel]], in [[Tweante]]. Zo as öaren naamn al dut vermoodn begun Triooo met dree man. Seend 1998 bint ze met n veern. Zelf zegnt ze op öare webstea oaver de saamnstelling: "''iej nemt r twee oet 'Enschede' en döt krek zo oet 'Hengelo', dan krie'j TRIOOO''."<ref>http://www.triooo.nl/Sub/Bandbio.html</ref> Triooo besteet oet [[René Vrieler]], [[Harm Braam]], [[Fred van de Ven]] en [[Henk van de Wetering]].
+'''Triooo''' is ne muziekgroepe oet [[Eanske]] en [[Hengel (Oaveriessel)|Hengel]], in [[Tweante]]. Zo as öaren naamn al dut vermoodn begun Triooo met dree man. Seend 1998 bint ze met n veern. Zelf zegnt ze op öare webstea oaver de saamnstelling: "''iej nemt r twee oet 'Enschede' en döt krek zo oet 'Hengelo', dan krie'j TRIOOO''."<ref>http://www.triooo.nl/Sub/Bandbio.html</ref> Triooo besteet oet [[René Vrieler]], [[Harm Braam]], [[Fred van de Ven]] en [[Henk van de Wetering]].
 
 Ze zingt meesttieds in t [[Tweants]]. Det kan eegn woark wean, mear ook bestoande nommers, of meziek op teksn van [[Willem Wilmink]], [[Theo Vossenbeld]], [[Sebastiaan Roes]], mear wal umme zat in t Tweants.
 
