[[Hengel]] → [[Hengel (Oaveriessel)]]

--- a/Universiteat_Tweante.mw
+++ b/Universiteat_Tweante.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:University of Twente logo.png|thumb|right|300px|t Nieje völbesprökkene logo van de UT]]
 De '''Universiteat Tweante''' (UT) is ne wetenskoppelike oonderzeuk- en oonderwiesinstellige in [[Eanske]] in [[Tweante]], den't zik vuural richtet op techniek en moatskoppieje. Hee is op erichtet in [[1961]]. Der stoat non 8058 studeanten in eskrewen, en 1516 man wetenskoppelike metwoarkers.
 
-De UT ligt in de wieke [[Twekkelerveald]], op t oolde laandgood [[Drienerlo]], tusken [[Hengel]] en [[Eanske]] in. t Is de ennigste universiteat met n kaamp (''campus''); alle studeantenhuze, metwoarkershuze, sportzalen, en vakgroepgebouwen stoat bie mekoar op enen plek.
+De UT ligt in de wieke [[Twekkelerveald]], op t oolde laandgood [[Drienerlo]], tusken [[Hengel (Oaveriessel)|Hengel]] en [[Eanske]] in. t Is de ennigste universiteat met n kaamp (''campus''); alle studeantenhuze, metwoarkershuze, sportzalen, en vakgroepgebouwen stoat bie mekoar op enen plek.
 
 {{beginneken}}
 
