--- a/Tweantekanaal.mw
+++ b/Tweantekanaal.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Twentekanaal.jpg|right|thumb|250px|t Tweantekanaal bie de Dochterense brugge in de buurte van Lochem]]
-t '''Tweantekanaal''' is ne [[kanaal (waterweg)|waterweg]] in de [[Neerlaand]]se proveensies [[Gelderlaand|Geelderlaand]] en [[Oaweriessel]], den't de dree grote steaden van [[Tweante]] ([[Almelo]], [[Hengel]] en [[Eanske]]) anslot op n laandelik netwoark van [[rivier]]en en kanalen. Umdet der ne vertakkige noar Almelo löp, hef t [[Rijkswaterstaat]] aait oawer "Tweantekanalen".
+t '''Tweantekanaal''' is ne [[kanaal (waterweg)|waterweg]] in de [[Neerlaand]]se proveensies [[Gelderlaand|Geelderlaand]] en [[Oaweriessel]], den't de dree grote steaden van [[Tweante]] ([[Almelo]], [[Hengel (Oaveriessel)|Hengel]] en [[Eanske]]) anslot op n laandelik netwoark van [[rivier]]en en kanalen. Umdet der ne vertakkige noar Almelo löp, hef t [[Rijkswaterstaat]] aait oawer "Tweantekanalen".
 
-t Tweantekanaal begeent bie n [[Iessel]] op t noorden van [[Zutfen]] bie t döarpken [[Eefde]] en geet laanks de plaatsen [[Almen]], [[Lochem]], [[Goor]], [[Dealdn|Dealden]] en [[Hengel (Oaveriessel)|Hengel]] noar [[Eanske]]. Op t westen van Dealden löp der nen ziedsproonk noar [[Almelo]].
+t Tweantekanaal begeent bie n [[Iessel]] op t noorden van [[Zutfen]] bie t döarpken [[Eefde]] en geet laanks de plaatsen [[Almen]], [[Lochem]], [[Goor]], [[Dealdn|Dealden]] en Hengel noar Eanske. Op t westen van Dealden löp der nen ziedsproonk noar Almelo.
 
 Beaide kanalen (Zutfen - Eanske en t ziedkanaal Dealden - Almelo) wörd beheard duur Riekswaterstoat. t Kanaalpaand Eefde - Dealden is 33 km laank, n ziedsproonk Dealden - Almelo is 15 km en de kanaalpaanden Dealden - Hengel en Hengel - Eanske zeent 9 en 5 kilometer laank. Doarmet is t kanaal in totaal 65 kilometer.
 
