[[Hengel]] → [[Hengel (Oaveriessel)]]

--- a/De_Twentsche_Courant_Tubantia.mw
+++ b/De_Twentsche_Courant_Tubantia.mw
@@ -5,7 +5,7 @@ De kraante is seend [[1 november]] [[1999]] ne moarnkraante. Zo as den non beste
 ==Oploages==
 Staand per [[2001]] (totaal 137.850):
 * [[Eanske]] 30.100
-* [[Hengel]] 31.500
+* [[Hengel (Oaveriessel)|Hengel]] 31.500
 * [[Almelo]] 25.700
 * [[Oldenzel]] 17.800
 * West ([[Riessen]]/[[Nijverdal]]/[[Wierden]]) 13.250
