[[Larry Sanger]], de statistieken bint te old (an epast bint "roem dreimiljoen artikels" ([[en:Special:Statistics]]) en 16 miljoen artikels (http://stats.wikimedia.org/reportcard/#fragment-42))

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -1,11 +1,11 @@
 [[Ofbeelding:Wikipedia-logo.png|right|200px|'t Beelmärk van Wikipedie]]
-'''Wikipedia''' (op nds-nl: ''Wikipedie'') is een prejek van de [[Wikimedia Foundation|Wikimedia-stichting]], die as doel ef um in elke tääl een volledige en rechenvri'je [[encyclopedie]] op 't internet te mäken. Naost typische encyclopedie-artikels bevat Wikipedie ok infermasie die väke in verband ebrach wordt mit [[almenak]]ken, specialitische tiedskriften en zäken die in 't ni'js bint .
+'''Wikipedie''' ([[Engels]]: ''Wikipedia'') is een prejek van de [[Wikimedia Foundation|Wikimedia-stichting]], die as doel ef um in elke tääl een volledige en rechenvri'je [[encyclopedie]] op 't internet te mäken. Naost typische encyclopedie-artikels bevat Wikipedie ok infermasie die väke in verband ebrach wordt mit [[almenak]]ken, specialitische tiedskriften en zäken die in 't ni'js bint .
 
-Onder de [[parreplu|pärreplu]] van de Wikimedia-stichting bint verskillende prejekken, waorvan Wikipedie 't oldste, bekendste en succesvolste prejek is. De orgenisasie Wikipedia is evestigd in [[Florida]], [[Verienigde Staoten van Amerika|Amerika]] en ef gien winstoogmärk. Wikipedie is estich deur [[Jimmy Wales]].
+Onder de [[parreplu|pärreplu]] van de Wikimedia-stichting bint verskillende prejekken, waorvan Wikipedie 't oldste, bekendste en succesvolste prejek is. De orgenisasie Wikipedia is evestigd in [[Florida]], [[Verienigde Staoten van Amerika|Amerika]] en ef gien winstoogmärk. Wikipedie is estich deur [[Larry Sanger]] en [[Jimmy Wales]].
 
 Umdät de artikels deur elke bezuker bewärkt kunnen wonnen, geef Wikipedie gien gerantie dät de artikels ok daodwärkelijk goed eskreven bin. Vandelisme is väke een prebleem, veural bi'j de wat grotere Wikipedieën.
 
-'t Wikipedie-prejek is begunnen op [[15 jannewaori]] [[2001]], mär bestun toe alleend nog mär in 't [[Engels]]. De eerste anderstälige versie was in 't [[Frans|Fraans]], en begun op [[23 meert]] [[2001]]. De [[Nedersaksisch]]e versie van Wikipedie is begunnen op [[23 meert]] [[2006]] en ef noe '''{{NUMBEROFARTICLES}}''' artikels. Disse is te vienen op <nowiki>nds-nl.wikipedia.org</nowiki>. De [[Ingels|Engelse]] versie is 't grootst en ef al roem twiemiljoen artikels. In totaal bint der meer as 8 miljoen artikels te vienen op iel Wikipedie in 253 verskillende tälen.
+'t Wikipedie-prejek is begunnen op [[15 jannewaori]] [[2001]], mär bestun toe alleend nog mär in 't [[Engels]]. De eerste anderstälige versie was in 't [[Frans|Fraans]], en begun op [[23 meert]] [[2001]]. De [[Nedersaksisch]]e versie van Wikipedie is begunnen op [[23 meert]] [[2006]] en ef noe {{NUMBEROFARTICLES}} artikels. Disse is te vienen op http://nds-nl.wikipedia.org/. De [[Ingels|Engelse]] versie is 't grootst en ef roem dreimiljoen artikels. In totaal bint der meer as 16 miljoen artikels te vienen op iel Wikipedie in 253 verskillende tälen.
 
 {{Dia|Disse pagina is eskreven in 't [[Attems]]}}
 
