http://www.gemeente-oldambt.nl/index.php?simaction=content&mediumid=37&pagid=4081

--- a/Oldambt_(gemainte).mw
+++ b/Oldambt_(gemainte).mw
@@ -1,24 +1,24 @@
 {{Gemainte
 |noam = Oldambt
 |lokoatsie = Map_-_NL_-_Oldambt
-|bestaandsnoam vlag =
-|bestaandsnoam woapen =
+|bestandsnoam vlage = Oldambt vlag KL.jpg
+|bestandsnoam woapen = Oldambt Wapen KL (W).jpg
 |provìnzie = Grunnen
 |heufdploats = [[Winschoot]]
 |oppervlak = 296,42
 |oppervlak laand = 234,46
 |oppervlak woater = 61,96
 |inwoner = 39.543
-|doatum inwoner = [[31 december|31 dezìmber]] [[2008]]
+|doatum inwoner = 2008
 |dichtte = 169
-|breedtegroad = 53/09/0/N
-|lengtegroad = 7/02/0/E
+|breedtegroad = 53/9//N
+|lengtegroad = 7/2//E
 |verkeersader = [[A7]]; spoorlien [[Grunnen]]-[[Schaanze]]
 |netnummer = 0596, 0597, 0598
 |postkode = 9670-9682, 9684-9694, 9940-9944
 |webstee = [http://www.gemeente-oldambt.nl www.gemeente-oldambt.nl]
 }}
-'''Oldambt''' is de noam van de fuziegemainte ien t Nederlaandse [[Grunnen (provìnzie)|Oost Grunnen]], dij op [[1 jannewoari]] [[2010]] ontstaait oet soamenvougen van [[Scheemde]], [[Winschoot]] en [[Reiderlaand]]. De noam komt van de [[Oldambt|streek]] woarien nije gemainte ligt. Deur n vroagenbraaifje ien te vullen konden ienwoner n noam oetkiezen. Op [[20 november|20 novìmber]] [[2008]] is bekìndmôkt dat de noam Oldambt wonnen haar. Aander meugelkheden wazzen Winschoot en Reiderlaand.
+'''Oldambt''' is de noam van de fuziegemainte ien t Nederlaandse [[Grunnen (provìnzie)|Oost Grunnen]], dij op [[1 jannewoari]] [[2010]] ontstaait oet soamenvougen van [[Scheemde]], [[Winschoot]] en [[Reiderlaand (gemainte)|Reiderlaand]]. De noam komt van de [[Oldambt (streek)|streek]] woarien nije gemainte ligt. Deur n vroagenbraaifje ien te vullen konden ienwoner n noam oetkiezen. Op [[20 november|20 novìmber]] [[2008]] is bekìndmôkt dat de noam Oldambt wonnen haar. Aander meugelkheden wazzen Winschoot en Reiderlaand.
 
 Ien jannewoari 2008 besloten de drij gemainten onder drok van provìnzie [[Grunnen (provìnzie)|Grunnen]] de gemaintelke fuzie tou goan doun, ook omdat tuzzen Scheemde en Winschoot der om tou t kunstmoatege [[Oldambtmeer]] t [[Blaauwe Stad|Blaauwe Stadprojekt]] aanlegd wordt. Veuraal de kommunistische partaaien, de NCPN ien Reiderlaand en de VCP ien Scheemde, hebben staark protesteerd tegen de fuzie. Ook nou dat de prozedure zowat ôfronden is, blieven zai zok verzetten. Ien roadsvergoadern bleken zai de ainigste tegenstaanders te wezen.
 
