--- a/Oldambt_(gemainte).mw
+++ b/Oldambt_(gemainte).mw
@@ -31,6 +31,8 @@ De nije gemainte zel de eerste gemainte ien Nederlaand wezen mit n [[Grunnegs]]e
 == Reverìnsies ==
 <references />
 
+{{Grunnen}}
+
 [[Kattegerie:Grunnegs_artikel]]
 [[Kattegerie:Gemainte in Grunnen]]
 
