{{DEFAULTSORT:{{PAGENAME}}}}; As "Saksischen regio" in [[Kattegerie:Ofbeelding:Flagge]]

--- a/Bestaand:Flagge_saksischen_regio.jpg.mw
+++ b/Bestaand:Flagge_saksischen_regio.jpg.mw
@@ -3,4 +3,5 @@ Flagge_saksischen_regio.jpg
 == Licentie ==
 {{PD-eigenwark}}
 
-[[Kattegerie:Ofbeelding:Flagge]]
+{{DEFAULTSORT:{{PAGENAME}}}}
+[[Kattegerie:Ofbeelding:Flagge|Saksischen regio]]
