--- a/Bestaand:Intersaksische_vlagge_7.png.mw
+++ b/Bestaand:Intersaksische_vlagge_7.png.mw
@@ -3,4 +3,5 @@ Meugelijk ontwarp van de ni'je vlagge veur de Nedersaksische wiekie's.
 == Licentie ==
 {{Eigenwark}}
 
+{{DEFAULTSORT:{{PAGENAME}}}}
 [[Kattegerie:Ofbeelding:Flagge]]
