--- a/Bestaand:Intersaksische_vlagge_klad_2.png.mw
+++ b/Bestaand:Intersaksische_vlagge_klad_2.png.mw
@@ -3,4 +3,5 @@ ander klad versie van ontwarp nedersaksische vlagge
 == Licentie ==
 {{Eigenwark}}
 
+{{DEFAULTSORT:{{PAGENAME}}}}
 [[Kattegerie:Ofbeelding:Flagge]]
