--- a/Top_100_der_Nederlaandse_UNESCO-monumenten.mw
+++ b/Top_100_der_Nederlaandse_UNESCO-monumenten.mw
@@ -114,7 +114,7 @@ Oaveregens hantiert de UNESCO wal ne [[Wealdarfgoodliest]]e, wat volgens heur de
 |-
 | [[Stadhoes van Franeker]] || 16den eeuwe || Franeker || FR || [[Ofbeelding:Franeker stadhuis 03c.JPG|90x999px|Stadhoes van Franeker]]
 |-
-| [[Stoomgemoal Mastenbrook]] || [[1856]] || [[Genemuden]] || OV || 
+| [[Stoomgemoal Mastenbrook]] || [[1856]] || [[Gällemuun]] || OV || 
 |-
 | [[Grote of Sint-Janskarke (Gouda)|Sint Janskarke / Goudse glaeze]] || 16/17de eeuwe || [[Gouda]] || ZH || [[Ofbeelding:St.Janskerk.jpg|90x999px|Sint Janskarke, Gouda]]
 |-
