--- a/Ooststellingwarf.mw
+++ b/Ooststellingwarf.mw
@@ -11,8 +11,8 @@ oppervlak waeter = 1,32 |
 inwoners = 26.355 |
 daotum inwoners = [[1 febrewaori]] [[2008]] |
 dichthied = 116 |
-brettegraod = 53/00/00/N |
-lengtegraod = 6/30/00/E |
+brettegraod = 52/59//N |
+lengtegraod = 6/18//E |
 verkeersaoder = N381, N351, N380 |
 netnummer = 0516 |
 postkode = 8421 - 8435 |
