--- a/Noordwoolde.mw
+++ b/Noordwoolde.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Map NL Eaststellingwerf Nijeberkeap.png|thumb|300px|Ligging Ni'jberkoop]]
+[[Ofbeelding:Map NL Weststellingwerf Noardwâlde.png|thumb|300px|Ligging Noordwoolde]]
 '''Noordwoolde''' ([[Nederlaands|Nederlaans]]: ''Noordwolde'', [[Fries]]: ''Noardwâlde'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]] en het omdebi'j 3.500 inwoners.
 
 Noordwolde leit zo omdebi'j op et 'drieperveensiënpunt' van de perveensies Frieslaand, [[Drenthe]] en [[Oaveriessel|Overiessel]] in een aorig besleuten laandschop mit in et zuden  en oosten de bossen en heidevelden van Drenthe en in et westen de [[Lende]]vallei en et veerdere waeterrieke Frieslaand.
@@ -7,7 +7,7 @@ De bi'jnaemen veur de inwoners van Noordwoolde bin ''(brogge)wippers'' of ''veld
 
 {{Weststellingwarf}}
 
-[[Kattegerie:Stellingwarfs_artikel]]
+[[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Stellingwarven]]
 
 [[en:Noordwolde]]
