[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -245,7 +245,7 @@ De huuzn hebt een geute van grune varve. Een vrouwe hef zolt water uut de ketel 
 
 ===[[Sallaans]]===
 
-De uuzn ebn een geute van grune värve. Een vrouwe ef zolt water uut de ketel in een bäkkien of pöttien edaon. ''([[Kampen]])''<br />
+De uuzn ebn een geute van grune värve. Een vrouwe ef zolt water uut de ketel in een bäkkien of pöttien edaon. ''([[Kampen (Overiessel)|Kampen]])''<br />
 De huuzn hebt een götte van grune värve. Een vrouwe hef zolt water uut de kettel in een bäkkie of pöttie edaon. ''([[Dalsen]])''<br />
 De huuzn hebt een göte van grune värve. Een vrouwe hef zòolt wäter uut de kètel in een bäkkie<small>(</small>n<small>)</small> of pöttie<small>(</small>n<small>)</small> edaon. ''([[Wieje]])''<br />
 De huuze hebt ne götte van grune värve. Ne vrouwe hef zolt water uut n kettel in een bäkkie of pöttie edaon. ''([[Heldern]])''
