--- a/Zuderzee.mw
+++ b/Zuderzee.mw
@@ -1,10 +1,10 @@
-[[Image:PlanLely.jpg|thumb|right|300px|Plan Lely mit de Ofsluutdiek en dreugleggingen]]
+[[Image:PlanLely.jpg|thumb|right|Plan Lely mit de Ofsluutdiek en dreugleggingen]]
 De '''Zuderzee''' was de naam van de grote [[binnenzee]] die, tot de sluting van de [[Ofsluutdiek]] ([[1932]]), lag op de plekke van wat noe 't [[Iesselmeer]] is.
 Nao 't gereedkommen van de [[Ofsluutdiek]] wörden 't waoter Iesselmeer eneumd, naor de revier de [[Iessel]] die derin uutmondt.
 
 De Zuderzee ontstong in de loop van de [[middeleeuwn|middeleeuwen]] uut een merencomplex dät in de Romeinse tied al bekend stong as ''Flevo Lacus'' (''Flevomeer''). De soms woeste binnenzee was zowel een vleuk as een zegen veur de bewoners van 't umliggende laand. Verschillende [[waotersnood|waotersnoden]] tröffen de umliggende gebieden.
 
-Haandelsschepen bevoeren de zee; havensteden as [[Kampen]] en [[Harderwiek]] beheuren tot de [[Hanze]], en via de Zuderzee voeren [[Vereenigde Oostindische Compagnie|VOC-schepen]] naor [[Hoorn (Noord-Hollaand)|Hoorn]] en [[Amsterdam]]. Ok wörden der volop evist. 
+Haandelsschepen bevoeren de zee; havensteden as [[Kampen (Overiessel)|Kampen]] en [[Harderwiek]] beheuren tot de [[Hanze]], en via de Zuderzee voeren [[Vereenigde Oostindische Compagnie|VOC-schepen]] naor [[Hoorn (Noord-Hollaand)|Hoorn]] en [[Amsterdam]]. Ok wörden der volop evist. 
 In [[1900]], toe de Zuderzeevisserieje op heur hoogtepunt was, wörden der zo'n 3000 [[platbodem]]s actief waormee evist wörden op [[heern (visk)|hering]], [[ansjovis]], [[paoling]], [[bot (vis)|bot]] en [[genoat|gernaolen]].
 
 ==Nedersaksisch==
