[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -14,7 +14,7 @@ daotum inwoeners = [[1 juni]] [[2007]] |
 dichtheid = 1012 |
 breedtegraod = 52/31/0/N |
 lengtegraod = 6/5/0/E |
-verkeersaoder = A28, A50, A35, N331, N337, N340, N764; spoor naor [[Grunnen|Grunningen]], [[Liwwadden|Leeuwarden]], [[Amersfoort]], [[Em (plaots)|Em]], [[Almelo]], [[Arnem]], [[Utrecht]] en [[Kampen]] |
+verkeersaoder = A28, A50, A35, N331, N337, N340, N764; spoor naor [[Grunnen|Grunningen]], [[Liwwadden|Leeuwarden]], [[Amersfoort]], [[Em (plaots)|Em]], [[Almelo]], [[Arnem]], [[Utrecht]] en [[Kampen (Overiessel)|Kampen]] |
 netnummer = 038 |
 postcode = 8000-8049 |
 webstee = [http://www.zwolle.nl www.zwolle.nl] |
@@ -24,7 +24,7 @@ webstee = [http://www.zwolle.nl www.zwolle.nl] |
 == Geskiedenisse ==
 Zwolle is in de [[middeleewn|middeleeuwen]] ontstaon op een dekzandrugge tussen de [[Iessel]] en de [[Vechte]] an 't reviertien de Aa. Dit was een oger gelegen en bewoonbaere plase in 't värdere [[moor (toponiem)|moerassige]] landskap. Zo'n plase ieten toen een ''Suolle'', wat later is verbasterd töt ''Zwolle''.
 
-De oldste skriftelijke vermelding, uut [[1040]], ef 't aover een an Sint-Michaël gewijde perochiekärke. In [[1230]] kreeg Zwolle van de Biskop van Utrecht stadsrechen. In de late middeleeuwen trad 't toe töt de Anze en is 't samen met [[Dèventer]] en [[Kampen]] een belangriek andelscentrum ewörren. In de [[15e eeuw]] leiden Geert Grote ier de medärne Devotie.
+De oldste skriftelijke vermelding, uut [[1040]], ef 't aover een an Sint-Michaël gewijde perochiekärke. In [[1230]] kreeg Zwolle van de Biskop van Utrecht stadsrechen. In de late middeleeuwen trad 't toe töt de Anze en is 't samen met [[Dèventer]] en [[Kampen (Overiessel)|Kampen]] een belangriek andelscentrum ewörren. In de [[15e eeuw]] leiden Geert Grote ier de medärne Devotie.
 
 ==Tääl==
 't [[Zwols]] is 't [[Nedersaksisch]]e stadsdialect van Zwolle. Volgens de [[Taaltelling Nedersaksisch]] van 't [[Nedersaksisch Instituut]] (2003) zeg 61% van de ondervraogde mensen in Zwolle Zwols te kunnen praoten.<ref>Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.) (2008), ''Handboek Nedersaksische Taal- en Letterkunde'', Assen: Van Gorcum (p.310)</ref>
