--- a/Iessel.mw
+++ b/Iessel.mw
@@ -4,9 +4,9 @@ De [[revier]] de '''Iessel''' of '''Iesselt'''<ref>'' 'Ut pas gemeijde grös gef
 
 De oorspronkeleke bobenloop van de Iessel is niet 't traject Westervoort - [[Doezebarg]] (det egraoben is), mar de [[Olde Iessel]], teengswoordig een zi'jrevier die bi'j Doezebarg in de Iessel uutmondt. Aandere zi'jrevieren bint de [[Berkel]] en de [[Schipbeek]]. 't [[Ganzediep]] is een olde oftakking.
 
-Van [[Dèventer]] töt nao [[Attem]] is de Iessel de grèens tussen [[Gelderlaand]] en [[Oaveriessel]], mar dielen van det traject ligt hielemaol in Oaveriessel (bi'j Dèventer, [[Olst]] en [[Wieje]]). Det giet ok op veur 't leste traject. Nao [[Kampen (Overiessel)|Kampen]] en 't daor teengaover eleeng [[Ieselmuun]] vörmen de revier een kleine [[revierdelta|delta]], mar buten 't [[Keteldiep]], de heufdtak, bint de aandere naarms of-edamd.
+Van [[Dèventer]] töt nao [[Attem]] is de Iessel de grèens tussen [[Gelderlaand]] en [[Oaveriessel]], mar dielen van det traject ligt hielemaol in Oaveriessel (bi'j Dèventer, [[Olst]] en [[Wieje]]). Det giet ok op veur 't leste traject. Nao [[Kampen (Overiessel)|Kampen]] en 't daor teengaover eleeng [[Iesselmuun]] vörmen de revier een kleine [[revierdelta|delta]], mar buten 't [[Keteldiep]], de heufdtak, bint de aandere naarms of-edamd.
 
-De veurnaomste plaotsen an de Iessel bint [[Zutfent]], Dèventer en Kampen. [[Zwolle]] lig a'j 't sekuur bekiekt meer an 't [[Zwatte Water]] as an de Iessel, mar de mèensen ziet Zwolle toch vake as een Iesselstad. Historische stadties an de Iessel bint ok Doezebarg en Hattem.
+De veurnaomste plaotsen an de Iessel bint [[Zutfent]], Dèventer en Kampen. [[Zwolle]] lig a'j 't sekuur bekiekt meer an 't [[Zwärte Wäter|Zwatte Water]] as an de Iessel, mar de mèensen ziet Zwolle toch vake as een Iesselstad. Historische stadties an de Iessel bint ok Doezebarg en Hattem.
 
 == Geschiedenis ==
 't Lik derop det de Iessel ontstaon is umdebi'j 12 veur Christus, toen as de [[Romeinse Riek|Romeinse]] strieder [[Nero Claudius Drusus|Drusus]] de Rien op de Olde Iessel ansleut deur middel van een kenaol det ze de [[Fossa Drusiana]] neumden. Dit is de teengswoordige bobenloop van de Iessel. De Romeinen hebt dit kenaol angelegd umdet ze d'r aover prakkezeerden de greens van 't Riek van de Rien naor de [[Elbe]] te verschoeven (wat ze niet veur mekaar ekregen hebt). Ze wollen de Fossa Drusiana gebruken um mit boten naor Flevo Lacus (een meer daor as now [[Flevolaand]] lig) te kunnen varen.
