--- a/Dedemsvaort_(kenaal).mw
+++ b/Dedemsvaort_(kenaal).mw
@@ -1,7 +1,7 @@
 [[Image:Scheepsjager.jpg|thumb|right|210px|De [[scheepsjager]] trök mit zien peerd de turfschepen deur 't kenaal]]
 De '''Dedemsvaort''' is een [[kenaal]] tussen [[Asselt]] en de [[Vechte]] bi'j [[Grambarge]]. 't Is vernuumd naor [[Willem Jan Baron Van Dedem]], die 't veertig kilometer lange kenaal leut graven veur 't vervoer van [[törf]]. 't Dörp Dedemsvaort (of körtweg [[De Vaort (plaots)|'De Vaort']]) is ontstaon an dit kenaal.
 
-De prakkezaosie um de uutestrekte [[veen|venen]] ten oosten van Asselt te ontginnen kwaamp van mr. [[Gerrit Willem van Marle]]. De steden [[Zwolle (Oaveriessel)|Zwolle]], [[Kampen]] en [[Dèventer]] verzetten heur d'r tegen, umdet ze bange waren det 't heur haandel zol schaden. Deur dizze tegenwarking slaagden Van Marle niet in zien plan.
+De prakkezaosie um de uutestrekte [[veen|venen]] ten oosten van Asselt te ontginnen kwaamp van mr. [[Gerrit Willem van Marle]]. De steden [[Zwolle (Oaveriessel)|Zwolle]], [[Kampen (Overiessel)|Kampen]] en [[Dèventer]] verzetten heur d'r tegen, umdet ze bange waren det 't heur haandel zol schaden. Deur dizze tegenwarking slaagden Van Marle niet in zien plan.
 
 Zien schoonzeune [[Willem Jan baron Van Dedem|Willem Jan baron Van Dedem tot Den Berg]] zetten nao 't overlieden van zien schoonva 't plan deur, en op 9 juli 1809 begunden ze 't kenaal de Dedemsvaort te graven. In 1811 gunk 't kenaal töt an [[De Balk]].
 
