[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Harm_Boom.mw
+++ b/Harm_Boom.mw
@@ -2,7 +2,7 @@
 '''Harm Boom''' ([[Grambarge]], [[Aoveriessel]], 1 december 1810 - [[Assen]], 12 juni 1885) was een [[Drèents]]talige skriever.
 
 ==Vrogge bezigheden==
-Boom hef onderwiezer ewest ('t beroep van zien va) ien [[Almelo]], [[Raolte]] en [[Kampen]]. Daornao weur-e kruidenier ien [[Koevern]]. Lichtkaans onder ienvloed van [[D.H. van der Scheer]] gung Boom hom mit schrieverije bezigholden. Vanof 1845 waarkten hi'j as verslaggever en redacteur bi'j een koppel kraanten ien [[Hollaand]], Aoveriessel en [[Utrecht]]. Ien 1859 trouwden hi'j ien Koevern mit Roelina Johanna Slingenberg. Mit vrouwe en kiender woonden hi'j een poosien ien [[Den Haag]].
+Boom hef onderwiezer ewest ('t beroep van zien va) ien [[Almelo]], [[Raolte]] en [[Kampen (Overiessel)|Kampen]]. Daornao weur-e kruidenier ien [[Koevern]]. Lichtkaans onder ienvloed van [[D.H. van der Scheer]] gung Boom hom mit schrieverije bezigholden. Vanof 1845 waarkten hi'j as verslaggever en redacteur bi'j een koppel kraanten ien [[Hollaand]], Aoveriessel en [[Utrecht]]. Ien 1859 trouwden hi'j ien Koevern mit Roelina Johanna Slingenberg. Mit vrouwe en kiender woonden hi'j een poosien ien [[Den Haag]].
 
 ==Drèentstalige schrieveri'je==
 Ien 1859 vestigen Boom hom ien [[Assen]], daoras hi'j stokkies en [[fulleton]]s skreef veur Drèentse [[kraante]]n. Mit Van der Scheer en [[A.L. Lesturgeon]] verzörgden hi'j ''Drenthe in vlugtige en losse omtrekken geschetst, door [[De Drie Podagristen|Drie Podagristen]]'', (1842-1847), een cultureel reisboek aover [[Drenthe]] (podagristen bint mèensen mit jicht an de tonen). Ok was hi'j redacteur van verskeiden Drèentse almanakken. Boom was ien van de eerste skrievers van fulletons die hielemaole ien 't Drèents esteld waren. Zien fulletons aover Jaaije en Berend Veltink waren de mèensen drok op en wördden ien 1950 nog ies uutegeben. Aover Booms kraantenfulletons skreef de ''Provinciale Drentsche en Asser Courant (PDAC)'' ien 1884: ''"Boom's werk heeft den kring van lezers der 'Drentsche Courant' op het platteland zeer vergroot."''
