--- a/Oaveriessels.mw
+++ b/Oaveriessels.mw
@@ -28,7 +28,7 @@ Kenmarken binnen de Noord-Oaveriesselse groep bint:
 *De verkleiningsuutgaank is ''-ie{{small()|n}}'': ''heufie{{small()|n}}'', ''zeuntie{{small()|n}}'', ''mannegie{{small()|n}}'', ''jonkie{{small()|n}}''.
 *In samenstellings van twiej zölfstaandige naamwoorden vörmt ze de verbindingsklaank miestentied mit allennig de ''e'': ''kraantebak'', ''{{small()|h}}onde-{{small()|h}}ok'' (aanderwoors in Oaveriessel ''kraantnbak'', ''{{small()|h}}ondn{{small()|h}}ok'').
 *Veule vrouwelijke woorden hebt een zwakke ''e'' (schwa) an 't ende, beveurbield ''mure, padde, piepe, varve/vaarve/värve''.
-*In 't westelijk diel van dit gebied (de Kop, [[Zwärtewäterlaand|Zwartewaterlaand]], [[Kampen]], [[Zwolle]], [[Asselt]], [[Stappest]], töt bi'j [[Ni'jlusen]]) spreekt ze de ''h'' an 't begun van een woord deurgaons niet uut.
+*In 't westelijk diel van dit gebied (de Kop, [[Zwärtewäterlaand|Zwartewaterlaand]], [[Kampen (Overiessel)|Kampen]], [[Zwolle]], [[Asselt]], [[Stappest]], töt bi'j [[Ni'jlusen]]) spreekt ze de ''h'' an 't begun van een woord deurgaons niet uut.
 *In 't noorden van de Kop van Oaveriessel hej in veule woorden de 'ae'-klaank, zoas in Stellingwarf en 't [[Zuudwest-Noord-Drèents]]: ''waeter, raem, maeken''.
 
 ''Veurbieldzinnen''<br />
@@ -124,7 +124,7 @@ De huse hebt ne go-ete van grune vaaive. Ne vraauwe hef zalt waeter uut n kjätt
 [[Ofbeelding:JacvanGinneken.jpg|thumbnail|300px|Fragment van Jac. van Ginneken zien dialectkaorte (1928)]]
 ===Jac. van Ginneken===
 De taalkundige Jac. van Ginneken (1877-1945) hef op zien 'Overzichtskaart der Nederlandsche dialecten' 't Oaveriessels in-edield in vier 'Saksische' dialectgroepen: 't Stellingwarfs, 't Gelders-Oaveriessels, 't Drèents en 't dialect van 't Vjenne.<ref>Dr. Jac. van Ginneken s.j. (1928). ''Handboek der Nederlandsche Taal, Deel I, De sociologische structuur der Nederlandsche taal I.'' Twiede drok. 's-Hertogenbosch: L.C.G. Malmberg.</ref>
-*'t [[Stellingwarfs]] löp op de kaorte van Van Ginneken een stok wieder umdeel as volngs de mieste indielings; töt veurbi'j [[Stappest]], [[Kampen]] en [[Zwolle]] en zölfs in een puntien van de [[Veluwe]] in [[Gelderlaand]] ([[Elburg]]). Miestentied wördt in Oaveriessel allennig 't noorden van de Kop van Oaveriessel as Stellingwarfstalig eziene, umdej daor in een bulte woorden de Stellingwarfse ''ae''-klaank hebt (''waeter, raem, tael''), waoraj in de rest van de Kop en daoronder ([[Venó]], [[De Sluus]], [[Stappest]]) een ''aa''-klaank hebt (''water, raam, taal'').<ref>Op 'e [http://www.stellingwarfs.nl/pictures/taalkaart2.jpg kaorte van de Stichting Stellingwarver Schrieversronte] giet 't Stellingwarfs niet wieder hen 't zuden as eêm boaven Wannepervene.</ref> (Wal hej nog zo zudelijk as Kampen, krek as in Stellingwarf, een uutzundering op 't [[Saksisch ienheidsmeervold]].) Ok in [[Frieslaand]] en [[Drenthe]] wik Van Ginneken zien plaatsing van 't Stellingwarfs slim of van 't gebrukelijke teengwoordige plaotien ('t beslat veur hum zölfs 't westelijkste diel van de pervincie [[Grunnen (provìnzie)|Grunning]]).
+*'t [[Stellingwarfs]] löp op de kaorte van Van Ginneken een stok wieder umdeel as volngs de mieste indielings; töt veurbi'j [[Stappest]], [[Kampen (Overiessel)|Kampen]] en [[Zwolle]] en zölfs in een puntien van de [[Veluwe]] in [[Gelderlaand]] ([[Elburg]]). Miestentied wördt in Oaveriessel allennig 't noorden van de Kop van Oaveriessel as Stellingwarfstalig eziene, umdej daor in een bulte woorden de Stellingwarfse ''ae''-klaank hebt (''waeter, raem, tael''), waoraj in de rest van de Kop en daoronder ([[Venó]], [[De Sluus]], [[Stappest]]) een ''aa''-klaank hebt (''water, raam, taal'').<ref>Op 'e [http://www.stellingwarfs.nl/pictures/taalkaart2.jpg kaorte van de Stichting Stellingwarver Schrieversronte] giet 't Stellingwarfs niet wieder hen 't zuden as eêm boaven Wannepervene.</ref> (Wal hej nog zo zudelijk as Kampen, krek as in Stellingwarf, een uutzundering op 't [[Saksisch ienheidsmeervold]].) Ok in [[Frieslaand]] en [[Drenthe]] wik Van Ginneken zien plaatsing van 't Stellingwarfs slim of van 't gebrukelijke teengwoordige plaotien ('t beslat veur hum zölfs 't westelijkste diel van de pervincie [[Grunnen (provìnzie)|Grunning]]).
 *'t Drèents löp bi'j Van Ginneken een endtien onder de grèenze mit Drenthe deur (de dialectliende volgt de [[Dedemsvaort (kenaal)|Dedemsvaort]], zoas ok op aandere olde kaorten). Dit wördt ok now nog wal zo eziene: de dialecten van de plaatsen krek onder de grèenze mit Drenthe (deur Scholtmeijer töt 't Noord-Oaveriessels erekend) liekt meer op de dialecten in 't zuudwesten van Drenthe as op 't Sallaans weengs de lange klinkers en 't gebrek an umlaut in 't verkleinwoord.
 *Twente en de rest van Sallaand bint veur Van Ginneken - mit de Achterhoek en 't oosten van de Veluwe - 't Gelders-Oaveriessels, op 't Vjenne nao, det ok veur Van Ginneken een eing groep vörmt. Dit grote gebied wördt op mederne kaorten wieder in-edield.
 
