--- a/Hanze.mw
+++ b/Hanze.mw
@@ -187,7 +187,7 @@ Ofbeelding:Danmark-Norge i 1814, Wienerkongressen..GIF|'t Baltische gebied in 18
 *[[Hilmessen]] (Hildesheim)
 *[[Hindeloopen]]
 *[[Kalmar]]
-*[[Kampen]]
+*[[Kampen (Overiessel)|Kampen]]
 | "valign=top" |
 *[[Kokenhusen]] (Koknese)
 *[[Lemge]] (Lemgo)
