[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Harrie_Scholtmeijer.mw
+++ b/Harrie_Scholtmeijer.mw
@@ -1,4 +1,4 @@
-'''Harrie Scholtmeijer''' ([[Kampen]], [[1960]]) is een [[Nederlaand|Nederlanse]] [[dialectologie|dialectoloog]] en een bekende schriever van Nederlanse dialect- en streektaalboeken.
+'''Harrie Scholtmeijer''' ([[Kampen (Overiessel)|Kampen]], [[1960]]) is een [[Nederlaand|Nederlanse]] [[dialectologie|dialectoloog]] en een bekende schriever van Nederlanse dialect- en streektaalboeken.
 
 Scholtmeijer is op-egreuid in [[Veno]]. IJ studeerden Nederlans, [[Oldsaksisch|Old-]] en [[Nedersaksisch]] in [[Grunnen (stad)|Grunningen]], wärkten in [[Utrecht]] en [[Amsterdam]] en promoveerden in 1992 [[Leidn|Leiden]] op 't Nederlans van de Iesselmeerpolders. IJ ef op 't [[Meertens Instituut]] in [[Amsterdam]] ewärkt. Sund [[1999]] wärkt Scholtmeijer in [[Kampen]] bij de [[Stichting Grensoverschrijdende Streektalen]]; vanof november [[2007]] wärkt e an de [[Hogeschool van Utrecht]].
 
