[[Kampen]] → [[Kampen (Overiessel)|Kampen]] ([[Kampen (Overiessel)]])

--- a/Zalk.mw
+++ b/Zalk.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:Wapen-Zalk-gemeente.jpg|thumb|Waopen van de gemeente Zalk en Veecaten]]
 [[Ofbeelding:Wapen-Zalk-heerlijkheid.jpg|thumb|Waopen van de eerlijkeid Zalk en Veecaten]]
-'''Zalk''' is een [[Nederlaand|Nederlans]] dörp op de zuudoever van de [[Iessel]] in de [[Overiessel]]se gemeente [[Kampen]]. 't Leg achter de [[winterdiek]] van de Iessel tegenover [[Wilsum]].
+'''Zalk''' is een [[Nederlaand|Nederlans]] dörp op de zuudoever van de [[Iessel]] in de [[Overiessel]]se gemeente [[Kampen (Overiessel)|Kampen]]. 't Leg achter de [[winterdiek]] van de Iessel tegenover [[Wilsum]].
 
 't Dörp Zalk be-eurde töt de [[Eerlijkeid]] [[Zalk en Veecaten]]. Nao de vörming van de gemeenten in [[1813]] is de eerlijkeid ummevörmd töt de gemeente Zalk en Veecaten. Disse gemeente is in [[1937]] op-egaon in de gemeente [[Iesselmuun]] en be-eurt sins [[2001]] töt Kampen.
 
